[package]
authors = ["Evgenii Lepikhin <e.lepikhin@corp.mail.ru>"]
edition = "2021"
name = "rpm-tool"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
slog = "2.7"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-syslog = { git = "ssh://git@gitlab.corp.mail.ru/MailBackendTest/foreign-ports/slog-syslog.git" }
fez = { path = "/tmp/fez" }
quick-xml = { version = "0.25", features = ["serialize"] }
lazy_static = "1.4"
regex = "1.6"
