package.authors = ["Evgenii Lepikhin <e.lepikhin@corp.mail.ru>"]
package.edition = "2021"
package.name = "rpm-tool"
package.version = "0.1.0"

[profile.release]
# Оптимизация бинарника релиза по размеру
# https://github.com/johnthagen/min-sized-rust
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[features]
parallel-zip = ["dep:gzp"]

[dependencies]
anyhow = "1.0"
clap = {version = "4.0", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
serde_regex = "1.1"
slog = "2.7"
slog-envlogger = "2.2"
slog-scope = "4.4"
slog-syslog = { path = "custom-vendored/slog-syslog" }
fez = { path = "custom-vendored/fez" }
quick-xml = { path = "custom-vendored/quick-xml", features = ["serialize"] }
lazy_static = "1.4"
regex = "1.6"
rayon = "1.5"
gzp = {version = "0.10", optional = true }
tempfile = "3.2"
file-lock = "2.1"
flate2 = "1.0"
rust-crypto = "0.2"
